Fix button alignement in section-2

--- a/_src/assets/scss/layout/_main-section-2.scss
+++ b/_src/assets/scss/layout/_main-section-2.scss
@@ -3,6 +3,7 @@
 
     padding-top: 30px;
     padding-bottom: 60px;
+    text-align: center;
 
     @media all and (min-width: 768px) {
         padding-top: 60px;
