--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -276,6 +276,7 @@ body {
   background-color: #eff9ff;
   padding-top: 30px;
   padding-bottom: 60px;
+  text-align: center;
 }
 
 .section-2 .grid-container {
